<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">framework</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ddd_dd_mmm">ddd DD. mmm</string>
    <string name="_15_00">15.00</string>
    <string name="_22_30">22.30</string>
    <string name="something">something</string>
    <string name="invite_amp_suggestions">Invite &amp; suggestions</string>
    <string name="going">Going</string>
    <string name="_0">0</string>
    <string name="maybe">Maybe</string>
    <string name="invited">Invited</string>
    <string name="declined">Declined</string>
    <string name="all_nday">ALL\nDAY</string>
    <string name="address">Address</string>
    <string name="title_">title...</string>
    <string name="share_my_eta_with">Share my ETA with</string>
    <string name="_">→</string>
    <string name="time_of_arrival">Time of arrival</string>
    <string name="organizer">Organizer</string>
    <string name="friends">Friends</string>
    <string name="everyone">Everyone</string>
    <string name="parking">Parking</string>
    <string name="navigate">Navigate</string>
    <string name="_7_5h_">(7.5h)</string>

</resources>