<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/titleBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@color/white"
            android:hint="@string/title_"
            android:textAppearance="?android:attr/textAppearanceLarge" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/leftBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:background="@drawable/my_arrow_left"
            android:gravity="fill_horizontal"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="6dp" >

            <TextView
                android:id="@+id/startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/ddd_dd_mmm"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/_15_00"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/dark_gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rightBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-20dp"
            android:layout_marginRight="6dp"
            android:layout_weight="0.5"
            android:background="@drawable/my_arrow_right"
            android:gravity="fill_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="6dp" >

            <TextView
                android:id="@+id/endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/ddd_dd_mmm"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:visibility="visible" />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/_22_30"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/dark_gray" />

        </LinearLayout>

        <TextView
            android:id="@+id/allDay"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:maxLines="2"
            android:text="@string/all_nday"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addressBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" >

        <ImageView
            android:id="@+id/addressIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="6dp"
            android:contentDescription="@string/something"
            android:src="@drawable/icon_5025" />

        <TextView
            android:id="@+id/addressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/address"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inviteStatusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:paddingBottom="2dp"
        android:paddingTop="4dp" >

        <LinearLayout
            android:id="@+id/goingBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/goingNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/going"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/going"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View
            android:id="@+id/View02"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/maybeBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/maybeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/maybe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/maybe"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View
            android:id="@+id/View01"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/invitedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/invitedNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/invited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/invited"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/declinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/declinedNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/_0"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/declined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/declined"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inviteBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/InviteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/invite_amp_suggestions"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>