<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/titleBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom"
                    android:contentDescription="@string/something"
                    android:padding="6dp"
                    android:src="@drawable/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/titleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <LinearLayout
                        android:id="@+id/dateBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/startText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ddd_dd_mmm"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:text="@string/_"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                        <TextView
                            android:id="@+id/endText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ddd_dd_mmm"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/startTime1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_15_00"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/_"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/endTime1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_22_30"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="4dp"
                            android:text="@string/_7_5h_"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/dark_gray" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/MOT"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/something"
                    android:src="@drawable/ic_launcher" />

                <View
                    android:id="@+id/View03"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark_gray" />

                <TextView
                    android:id="@+id/MOTtext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:text="@string/time_of_arrival"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="6dp"
                    android:text="@string/_"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inviteStatusBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:baselineAligned="false"
                android:paddingBottom="2dp"
                android:paddingTop="4dp" >

                <LinearLayout
                    android:id="@+id/goingBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/goingNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/_0"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/going"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/going"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

                <View
                    android:id="@+id/View02"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray" />

                <LinearLayout
                    android:id="@+id/maybeBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/maybeNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/_0"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/maybe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/maybe"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

                <View
                    android:id="@+id/View01"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray" />

                <LinearLayout
                    android:id="@+id/invitedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/invitedNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/_0"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/invited"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/invited"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="1dp"
                android:background="@color/white" >

            </LinearLayout>

            <LinearLayout
                android:id="@+id/privacyBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/share_my_eta_with"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false" >

                    <LinearLayout
                        android:id="@+id/organizerBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical" >

                        <CheckBox
                            android:id="@+id/checkOrg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="bottom" />

                        <TextView
                            android:id="@+id/TextView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:text="@string/organizer"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/friendsBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical" >

                        <CheckBox
                            android:id="@+id/checkFriends"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="bottom" />

                        <TextView
                            android:id="@+id/startDate2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:text="@string/friends"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/everyoneBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:orientation="vertical" >

                        <CheckBox
                            android:id="@+id/checkAll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="bottom" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:text="@string/everyone"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/mapBox"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/map_example" >

                <LinearLayout
                    android:id="@+id/addressBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    android:paddingBottom="4dp"
                    android:paddingTop="4dp" >

                    <ImageView
                        android:id="@+id/addressIcon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="top"
                        android:layout_marginLeft="6dp"
                        android:contentDescription="@string/something"
                        android:src="@drawable/icon_5025" />

                    <TextView
                        android:id="@+id/addressText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:text="@string/address"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/parking" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/navigate" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>